Pretty sure that fixed all the things I needed to worry about, back to the main branch (quasi-main branch) we go

--- a/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
+++ b/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Rebuilding_Everything\\Debugging Scripts\n",
+      "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Rebuilding_Everything\n",
+      "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Rebuilding_Everything\\Code_for_the_robot\n",
+      "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Rebuilding_Everything\n"
+     ]
+    }
+   ],
    "source": [
-    "#help(plt.Axes.scatter)"
+    "#help(plt.Axes.scatter)\n",
+    "import sys\n",
+    "path = os.path.abspath('')\n",
+    "# returns directory of the current file\n",
+    "print(path)\n",
+    "path = os.path.abspath('..\\\\')\n",
+    "# returns the parent directory of the current file\n",
+    "print(path)\n",
+    "path = os.path.abspath('..\\\\Code_for_the_robot')\n",
+    "# returns a directory contained within the parent directory of the current file\n",
+    "print(path)\n",
+    "path = os.path.abspath('..\\\\Code_for_the_robot\\\\..\\\\')\n",
+    "# returns the parent directory of the current file\n",
+    "print(path)"
    ]
   },
   {
@@ -37,12 +61,10 @@
     }
    ],
    "source": [
-    "path = os.path.abspath('')\n",
+    "path = os.path.abspath('..\\\\')\n",
     "\n",
-    "path = path + '\\\\ugh.json'\n",
-    "# path = r\"C:\\Users\\ander\\Documents\\COBOT-Transducer-Control-Code\\Rebuilding_Everything\\2022-05-05_16-42-57_test.json\"\n",
-    "path = r\"C:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\Rebuilding_Everything\\2022-05-05_16-42-57_test.json\"\n",
-    "\n",
+    "current_file = r\"2022-05-05_16-42-57_test.json\"\n",
+    "path = \n",
     "with open(path, 'r') as outfile:\n",
     "    point_mags = json.load(outfile)\n",
     "\n",
@@ -129,11 +151,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c0cfb07b2f3e4a3f41c2e4de9ee5ff3be585a17c682a0010fa54fc32f5e99ade"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -147,9 +166,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "eb47c00db74bb4a1d4c9e4b6be3a4775d0543742b16b98a2e829d5ed44e27699"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
