I believe I have sorted out all the file system issues now, should've been done on the other branch but whatever

--- a/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
+++ b/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
@@ -32,7 +32,6 @@
    ],
    "source": [
     "#help(plt.Axes.scatter)\n",
-    "import sys\n",
     "path = os.path.abspath('')\n",
     "# returns directory of the current file\n",
     "print(path)\n",
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -63,8 +62,8 @@
    "source": [
     "path = os.path.abspath('..\\\\')\n",
     "\n",
-    "current_file = r\"2022-05-05_16-42-57_test.json\"\n",
-    "path = \n",
+    "current_file = r\"\\\\2022-05-05_16-42-57_test.json\"\n",
+    "path = path + current_file\n",
     "with open(path, 'r') as outfile:\n",
     "    point_mags = json.load(outfile)\n",
     "\n",
