--- a/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
+++ b/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,11 +265,11 @@
    ],
    "source": [
     "fig2 = plt.figure(figsize=(14,4), constrained_layout=True)\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    \"font.serif\": [\"Palatino\"],\n",
-    "})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"serif\",\n",
+    "#     \"font.serif\": [\"Palatino\"],\n",
+    "# })\n",
     "\n",
     "tax = fig2.add_subplot(1,3,1, projection='3d')\n",
     "# tax.plot_trisurf(zmps[:,1], zmps[:,2], zmps[:,3], cmap='viridis')\n",
@@ -300,37 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ -0.5   -20.      0.     66.283]\n",
-      " [ -0.5   -18.      0.     35.341]\n",
-      " [ -0.5   -16.      0.     35.341]\n",
-      " [ -0.5   -14.      0.     57.44 ]\n",
-      " [ -0.5   -12.      0.     61.854]\n",
-      " [ -0.5   -10.      0.     61.854]\n",
-      " [ -0.5    -8.      0.     57.44 ]\n",
-      " [ -0.5    -6.      0.     35.341]\n",
-      " [ -0.5    -4.      0.     53.027]\n",
-      " [ -0.5    -2.      0.     35.341]\n",
-      " [ -0.5     0.      0.     39.77 ]\n",
-      " [ -0.5     2.      0.    366.772]\n",
-      " [ -0.5     4.      0.    500.   ]\n",
-      " [ -0.5     6.      0.     53.027]\n",
-      " [ -0.5     8.      0.    269.547]\n",
-      " [ -0.5    10.      0.    203.263]\n",
-      " [ -0.5    12.      0.     66.283]\n",
-      " [ -0.5    14.      0.    128.137]\n",
-      " [ -0.5    16.      0.     35.341]\n",
-      " [ -0.5    18.      0.     39.77 ]\n",
-      " [ -0.5    20.      0.     83.954]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "z_mps_x = zmps[zmps[:,1] == max_point[0][indeces['Rx'][0]][indeces['Rx'][1]]]\n",
     "z_mps_y = zmps[zmps[:,2] == max_point[0][indeces['Ry'][0]][indeces['Ry'][1]]]\n",
@@ -346,15 +318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_2624/3210745113.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\ander\\AppData\\Local\\Temp/ipykernel_2624/3210745113.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    ~.matplotlib.figure.Fig\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  7.5   -20.      0.    500.   ]\n",
+      " [  7.5   -18.      0.    500.   ]\n",
+      " [  7.5   -16.      0.    472.825]]\n"
      ]
     }
    ],
@@ -364,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +346,7 @@
        "Text(0, 0.5, 'Magnitude (mV)')"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
