Interrupted a scan just to verify that saving works properly, now it's gonna be running for eight minutes or so and hopefully it doesn't shit the bed again.

--- a/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
+++ b/Rebuilding_Everything/Debugging Scripts/Fullscan_renders.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "print(\"Available test files:\")\n",
     "file_itr = 0\n",
-    "while os.path.exists(path + \"\\\\test_%s.json\" % file_itr):\n",
+    "while os.path.exists(path + \"\\\\Scans\\\\test_%s.json\" % file_itr):\n",
     "    print(\"\\t\\\\test_%s.json\" % file_itr)\n",
     "    file_itr +=1\n",
     "file_itr = 0\n",
