--- a/IK_Scans/IK_experiments.ipynb
+++ b/IK_Scans/IK_experiments.ipynb
@@ -11,18 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import json\n",
-    "import os"
+    "import os\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -36,9 +37,12 @@
       "\tTest_08_07__18_16.json\n",
       "\tTest_08_07__18_22.json\n",
       "\tTest_08_07__18_26.json\n",
-      "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\IK_Scans\\Test_08_07__18_16.json\n",
-      "[[3.092], [5.599], [1.639], [2.363], [5.538], [1.323]]\n",
-      "[[[15, 15, -15], [-15, 15, 30]], [[3.001], [5.345], [1.641], [3.239], [5.818], [1.308]]]\n"
+      "\tTest_08_11__14_51.json\n",
+      "\tTest_08_11__15_02.json\n",
+      "\tTest_08_11__15_06.json\n",
+      "c:\\Users\\ander\\Documents\\COBOT-Transducer-Control-Code\\IK_Scans\\Test_08_11__15_02.json\n",
+      "[[3.196], [5.368], [1.623], [3.658], [5.913], [1.874]]\n",
+      "[[[0.4015], [0.4006], [0.1435]], [[0.009], [2.513], [1.748]]]\n"
      ]
     }
    ],
@@ -57,7 +61,7 @@
     "        print(\"\\t\" + file)\n",
     "        files.append(file)\n",
     "\n",
-    "i = 3\n",
+    "i = 7\n",
     "\n",
     "path = os.path.abspath(\"..\\\\IK_Scans\") + \"\\\\\" + files[i]\n",
     "\n",
@@ -67,30 +71,64 @@
     "    json_data = json.load(infile)\n",
     "\n",
     "\n",
+    "start_joints = json_data[\"Start joints\"]\n",
+    "joints_at_points = json_data[\"joints_at_points\"]\n",
+    "\n",
     "print(start_joints)\n",
     "\n",
-    "print(joints_at_points[1])"
+    "print(joints_at_points[0][2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3.092       0.          0.1519      1.57079633]\n",
-      " [ 5.599      -0.2434      0.          0.        ]\n",
-      " [ 1.639      -0.2132      0.          0.        ]\n",
-      " [ 2.363       0.          0.1311      1.57079633]\n",
-      " [ 5.538       0.          0.0854     -1.57079633]\n",
-      " [ 1.323       0.          0.0921      0.        ]]\n",
-      "[[-6.76906081e-03  3.31323850e-51 -0.00000000e+00 -0.00000000e+00]\n",
-      " [ 1.44314554e-02 -1.55407146e-51  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -0.00000000e+00  2.29584502e-49  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
+      "[[ 3.196       0.          0.1519      1.57079633]\n",
+      " [ 5.368      -0.2434      0.          0.        ]\n",
+      " [ 1.623      -0.2132      0.          0.        ]\n",
+      " [ 3.658       0.          0.1311      1.57079633]\n",
+      " [ 5.913       0.          0.0854     -1.57079633]\n",
+      " [ 1.874       0.          0.0921      0.        ]]\n",
+      "0\n",
+      "[[-9.98520285e-01  3.32984575e-18 -5.43805080e-02 -0.00000000e+00]\n",
+      " [-5.43805080e-02 -6.11417336e-17  9.98520285e-01 -0.00000000e+00]\n",
+      " [ 0.00000000e+00  1.00000000e+00  6.12323400e-17  1.51900000e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "1\n",
+      "[[-6.08741599e-01 -7.91502638e-01 -5.43805080e-02  1.48167705e-01]\n",
+      " [-3.31527340e-02 -4.31061003e-02  9.98520285e-01  8.06937544e-03]\n",
+      " [-7.92675572e-01  6.09643697e-01  6.12323400e-17  3.44837234e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "2\n",
+      "[[-7.58660257e-01  6.49212889e-01 -5.43805080e-02  3.09914072e-01]\n",
+      " [-4.13174682e-02  3.53568447e-02  9.98520285e-01  1.68782597e-02]\n",
+      " [ 6.50174962e-01  7.59784521e-01  6.12323400e-17  2.06219932e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "3\n",
+      "[[ 3.39175155e-01 -5.43805080e-02  9.39150134e-01  3.02784787e-01]\n",
+      " [ 1.84718503e-02  9.98520285e-01  5.11471445e-02  1.47784269e-01]\n",
+      " [-9.40541868e-01  4.04330746e-17  3.39677781e-01  2.06219932e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "4\n",
+      "[[ 0.33587376 -0.93915013  0.07201278  0.38298821]\n",
+      " [-0.34403228 -0.05114714  0.93756374  0.15215224]\n",
+      " [-0.87682986 -0.33967778 -0.34027694  0.23522841]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "[[-0.99659559 -0.04014207  0.07201278  0.38962059]\n",
+      " [ 0.05390685  0.34361067  0.93756374  0.23850186]\n",
+      " [-0.0623801   0.93825387 -0.34027694  0.20388891]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "-----------------\n",
+      "[[-0.99659559 -0.04014207  0.07201278  0.38962059]\n",
+      " [ 0.05390685  0.34361067  0.93756374  0.23850186]\n",
+      " [-0.0623801   0.93825387 -0.34027694  0.20388891]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "(0.3896205854771995, 0.2385018554769196, 0.2038889083179971, 0.062420630397159976, 3.087554320212389, 1.918713949448721)\n"
      ]
     }
    ],
@@ -103,11 +141,6 @@
     "                    [0,0.,0.0854,-np.pi/2],\n",
     "                    [0,0.,0.0921,0.]])\n",
     "\n",
-    "\n",
-    "# print(DH)\n",
-    "\n",
-    "start_joints = json_data[\"Start joints\"]\n",
-    "joints_at_points = json_data[\"joints_at_points\"]\n",
     "\n",
     "start_joints = np.array(start_joints).flatten()\n",
     "\n",
@@ -130,9 +163,51 @@
     "                            [0.,0.,0.,1.]]))\n",
     "\n",
     "(T1,T2,T3,T4,T5,T6) = tuple(joints)\n",
+    "# print(T1)\n",
+    "t = T1\n",
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "    print(t)\n",
+    "    t = np.matmul(t,joints[i+1])\n",
     "\n",
-    "final_result = T1 * T2 * T3 * T4 * T5 * T6\n",
-    "\n"
+    "print(t)\n",
+    "\n",
+    "final_result = np.matmul(np.matmul(np.matmul(np.matmul(np.matmul(T1,T2),T3),T4),T5),T6)\n",
+    "\n",
+    "print(\"-----------------\")\n",
+    "print(final_result)\n",
+    "\n",
+    "def matrix_to_coordinates(mat):\n",
+    "    X = mat[0,3]\n",
+    "    Y = mat[1,3]\n",
+    "    Z = mat[2,3]\n",
+    "\n",
+    "    beta = np.arctan2(-mat[2,0], (mat[0,0]**2 + mat[1,0]**2)**0.5)\n",
+    "    alpha = np.arctan2(mat[1,0]/np.cos(beta), mat[0,0]/np.cos(beta))\n",
+    "    gamma = np.arctan2(mat[2,1]/np.cos(beta), mat[2,2]/np.cos(beta))\n",
+    "    return X,Y,Z,beta,alpha,gamma\n",
+    "\n",
+    "print(matrix_to_coordinates(final_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.24526819 -0.96945527  0.          0.        ]\n",
+      " [ 0.96945527  0.24526819 -0.          0.        ]\n",
+      " [ 0.          0.          1.          0.0921    ]\n",
+      " [ 0.          0.          0.          1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(T6)"
    ]
   }
  ],
@@ -152,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
