--- a/IK_Scans/IK_experiments.ipynb
+++ b/IK_Scans/IK_experiments.ipynb
@@ -84,25 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "-----------------\n",
-      "[[-0.860  0.510 -0.000  0.411]\n",
-      " [ 0.509  0.858  0.065  0.043]\n",
-      " [ 0.034  0.056 -0.998  0.107]\n",
-      " [ 0.000  0.000  0.000  1.000]]\n",
-      "(0.4109003305853896, 0.04341059041693143, 0.10681338241267886, 1.6044459540027232, 2.105138391218879, 1.6269468950194426)\n",
-      "['0.41090', '0.04341', '0.10681', '1.60445', '2.10514', '1.62695']\n"
+      "[ 0.411  0.043  0.107  1.604  2.105  1.627]\n"
      ]
     }
    ],
@@ -116,19 +105,18 @@
     "                    [0,0.,0.0921,0.]])\n",
     "\n",
     "def matrix_to_coordinates(mat):\n",
-    "    # print(\"debugging the dumb method :/\")\n",
+    "    '''Accepts as input a 4x4 numpy array representing a transformation matrix\n",
+    "    and returns that transformation in an np array of the form\n",
+    "    [X,Y,Z, beta, alpha, gamma]'''\n",
     "    X = mat[0,3]\n",
     "    Y = mat[1,3]\n",
     "    Z = mat[2,3]\n",
-    "\n",
-    "    # print(mat)\n",
-    "    # print(f\"mat[2,0]: {mat[2,0]}\")\n",
     "\n",
     "    beta = np.arctan2((mat[0,0]**2 + mat[1,0]**2)**0.5,-mat[2,0])\n",
     "    cosb=np.cos(beta)\n",
     "    alpha = np.arctan2(mat[0,0]/cosb, mat[1,0]/cosb)\n",
     "    gamma = np.arctan2(mat[2,2]/cosb, mat[2,1]/cosb)\n",
-    "    return X,Y,Z,beta,alpha,gamma\n",
+    "    return np.array([X,Y,Z,beta,alpha,gamma])\n",
     "\n",
     "def joints_forward_kinematics(joints):\n",
     "    '''Accepts as input a list of 6 joint positions in radians'''\n",
@@ -140,56 +128,48 @@
     "    for i in range(6):\n",
     "        cos_io = np.cos(DH_params[i,0])\n",
     "        sin_io = np.sin(DH_params[i,0])\n",
-    "        j_pos.append(np.array([[cos_io, -sin_io * np.cos(DH_params[i,3]), sin_io * np.sin(DH_params[i,3]), DH_params[i,1] * cos_io],\n",
-    "                                [sin_io, cos_io * np.cos(DH_params[i,3]), -cos_io * np.sin(DH_params[i,3]), DH_params[i,1] * sin_io],\n",
-    "                                [0., np.sin(DH_params[i,3]), np.cos(DH_params[i,3]),DH_params[i,2]],\n",
-    "                                [0.,0.,0.,1.]]))\n",
+    "        cos_i3 = np.cos(DH_params[i,3])\n",
+    "        sin_i3 = np.sin(DH_params[i,3])\n",
+    "\n",
+    "        j_pos.append(np.array([\n",
+    "            [cos_io, -sin_io * cos_i3, sin_io * sin_i3, DH_params[i,1] * cos_io],\n",
+    "            [sin_io, cos_io * cos_i3, -cos_io * sin_i3, DH_params[i,1] * sin_io],\n",
+    "            [0., sin_i3, cos_i3,DH_params[i,2]],\n",
+    "            [0.,0.,0.,1.]\n",
+    "            ]))\n",
     "    \n",
-    "    (T1,T2,T3,T4,T5,T6) = tuple(j_pos)\n",
-    "    t = T1\n",
+    "    # (T1,T2,T3,T4,T5,T6) = tuple(j_pos)\n",
+    "    # t = T1\n",
+    "    t = j_pos[0]\n",
     "    for i in range(5):\n",
     "        t = np.matmul(t,j_pos[i+1])\n",
+    "    \n",
     "\n",
     "    return matrix_to_coordinates(t)\n",
     "\n",
-    "start_joints = np.array(start_joints).flatten()\n",
-    "DH[:,0] = start_joints\n",
-    "# print(DH)\n",
     "\n",
-    "joints=[]\n",
-    "\n",
-    "\n",
-    "for i in range(6):\n",
-    "    joints.append(np.array([[np.cos(DH[i,0]), -np.sin(DH[i,0]) * np.cos(DH[i,3]), np.sin(DH[i,0]) * np.sin(DH[i,3]), DH[i,1] * np.cos(DH[i,0])],\n",
-    "                            [np.sin(DH[i,0]), np.cos(DH[i,0]) * np.cos(DH[i,3]), -np.cos(DH[i,0]) * np.sin(DH[i,3]), DH[i,1] * np.sin(DH[i,0])],\n",
-    "                            [0., np.sin(DH[i,3]), np.cos(DH[i,3]),DH[i,2]],\n",
-    "                            [0.,0.,0.,1.]]))\n",
-    "\n",
-    "(T1,T2,T3,T4,T5,T6) = tuple(joints)\n",
-    "# print(T1)\n",
-    "t = T1\n",
-    "for i in range(5):\n",
-    "    print(i)\n",
-    "    # print(f\"Current matrix: {t}\")\n",
-    "    # print(f\"Current coordinates: {matrix_to_coordinates(t)}\")\n",
-    "    t = np.matmul(t,joints[i+1])\n",
-    "\n",
-    "# final_result = np.matmul(np.matmul(np.matmul(np.matmul(np.matmul(T1,T2),T3),T4),T5),T6)\n",
-    "\n",
-    "print(\"-----------------\")\n",
-    "print(t)\n",
-    "\n",
-    "print(matrix_to_coordinates(t))\n",
-    "# [format(a,'1.2f') for a in joints_forward_kinematics(start_joints)]\n",
-    "print([format(a,'0.5f') for a in joints_forward_kinematics(start_joints)])"
+    "print(joints_forward_kinematics(start_joints))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5,6])\n",
+    "print(a)\n",
+    "print(list(a))\n"
+   ]
   }
  ],
  "metadata": {
