--- a/IK_Scans/IK_experiments.ipynb
+++ b/IK_Scans/IK_experiments.ipynb
@@ -153,22 +153,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,6]\n",
+    "a[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4 5 6]\n",
-      "[1, 2, 3, 4, 5, 6]\n"
+      "(25, 3)\n",
+      "(25, 3)\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n",
+      "Compare: [ True  True  True]\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1,2,3,4,5,6])\n",
-    "print(a)\n",
-    "print(list(a))\n"
+    "Xs,Ys = np.mgrid[-5:5.1:0.5, -5:5.1:0.5]\n",
+    "# print(Xs.shape)\n",
+    "# print(Xs[0],Ys[0])\n",
+    "\n",
+    "X,Y,Z = np.mgrid[0:0:1j, -5:5:2, -5:5:2]\n",
+    "# print(X)\n",
+    "# print(Y)\n",
+    "# print(Z)\n",
+    "xyz = np.vstack((X.flatten(),Y.flatten(),Z.flatten())).T\n",
+    "# print(xyz)\n",
+    "\n",
+    "xyz2 = np.mgrid[0:0:1j, -5:5:2, -5:5:2].reshape(3,-1).T\n",
+    "\n",
+    "\n",
+    "xy = np.mgrid[-5:5.1:0.5, -5:5.1:0.5].reshape(2,-1).T\n",
+    "\n",
+    "print(xyz.shape)\n",
+    "print(xyz2.shape)\n",
+    "# print(xyz[6])\n",
+    "\n",
+    "for i in range(xyz.shape[0]):\n",
+    "    print(f\"Compare: {xyz[i] == xyz2[i]}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.array((1,2,3,4,5))\n",
+    "type(a) is not int"
    ]
   }
  ],
