I cannot get IK to behave, I need to get more data from Stanley before I continue

--- a/IK_Scans/IK_experiments.ipynb
+++ b/IK_Scans/IK_experiments.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "import os\n",
     "import time\n",
     "\n",
-    "np.set_printoptions(formatter={'float': '{: 0.3f}'.format})\n"
+    "# np.set_printoptions(formatter={'float': '{: 0.5f}'.format})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -33,16 +33,16 @@
      "output_type": "stream",
      "text": [
       "Available files:\n",
-      "c:\\Users\\ander\\Documents\\COBOT-Transducer-Control-Code\\IK_Scans\\Test_08_11__15_06.json\n",
-      "[[ 166.673]\n",
-      " [ 307.736]\n",
-      " [ 94.882]\n",
-      " [ 228.266]\n",
-      " [ 273.645]\n",
-      " [ 107.315]]\n",
+      "c:\\Users\\ander\\OneDrive - UW\\Robotics lab material\\Robotics Control Code\\Ben's Control Code\\IK_Scans\\Test_08_16__18_45.json\n",
+      "[[ 174.86672]\n",
+      " [ 337.64403]\n",
+      " [ 80.38598]\n",
+      " [ 212.28086]\n",
+      " [ 270.37878]\n",
+      " [ 95.68395]]\n",
       "Floating coordinate system: [[0, 0, 0], [0, 0, 0]]\n",
-      "Joint angles: [[2.909], [5.371], [1.656], [3.984], [4.776], [1.873]]\n",
-      "Base position: [[[0.4106], [0.0533], [-0.0662]], [[-0.822], [-3.011], [-0.089]]]\n"
+      "Joint angles: [[3.052], [5.893], [1.403], [3.705], [4.719], [1.67]]\n",
+      "Base position: [[[0.4321], [0.0936], [-0.2023]], [[-0.289], [-3.121], [-0.002]]]\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "        # print(\"\\t\" + file)\n",
     "        files.append(file)\n",
     "\n",
-    "i = 8\n",
+    "i = 9\n",
     "\n",
     "path = os.path.abspath(\"..\\\\IK_Scans\") + \"\\\\\" + files[i]\n",
     "\n",
@@ -71,8 +71,8 @@
     "    json_data = json.load(infile)\n",
     "\n",
     "\n",
-    "start_joints = json_data[\"Start joints\"]\n",
     "joints_at_points = json_data[\"joints_at_points\"]\n",
+    "start_joints = joints_at_points[0][1]\n",
     "\n",
     "print(np.rad2deg(start_joints))\n",
     "names = (\"Floating coordinate system\", \"Joint angles\", \"Base position\")\n",
@@ -84,25 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.411  0.043  0.107  1.604  2.105  1.627]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#               theta,a,d,alpha     (radians and meters)\n",
+    "# Theta represents the current orientation of that particular joint\n",
+    "tcp_offset = 0.08\n",
     "DH = np.array([[0, 0, 0.1519,np.pi/2],\n",
-    "                    [0,-0.2434,0.,0.],\n",
-    "                    [0,-0.2132,0.,0.],\n",
-    "                    [0,0.,0.1311,np.pi/2],\n",
-    "                    [0,0.,0.0854,-np.pi/2],\n",
-    "                    [0,0.,0.0921,0.]])\n",
+    "                [0,-0.2434,0.,0.],\n",
+    "                [0,-0.2132,0.,0.],\n",
+    "                [0,0.,0.1311,np.pi/2],\n",
+    "                [0,0.,0.0854,-np.pi/2],\n",
+    "                [0,0.,0.0921+tcp_offset,0.]])\n",
     "\n",
     "def matrix_to_coordinates(mat):\n",
     "    '''Accepts as input a 4x4 numpy array representing a transformation matrix\n",
@@ -118,11 +112,48 @@
     "    gamma = np.arctan2(mat[2,2]/cosb, mat[2,1]/cosb)\n",
     "    return np.array([X,Y,Z,beta,alpha,gamma])\n",
     "\n",
+    "def joints_forward_kinematics_messy(joints):\n",
+    "    '''Accepts as input a list of 6 joint positions in radians'''\n",
+    "    joints = np.array(joints).flatten()\n",
+    "    # joints = np.append(joints,0)\n",
+    "    DH_params = DH.copy()\n",
+    "    DH_params[:,0] = joints\n",
+    "\n",
+    "    j_pos = []\n",
+    "    for i in range(6):\n",
+    "        theta,a,d,alpha = DH_params[i,:].tolist()\n",
+    "        \n",
+    "        trans_1 = np.eye(4)\n",
+    "        trans_1[2,3] = d\n",
+    "\n",
+    "        rot_1 = np.array([[np.cos(theta), -np.sin(theta),0,0],\n",
+    "                        [np.sin(theta), np.cos(theta),0,0],\n",
+    "                        [0,0,1,0],\n",
+    "                        [0,0,0,1]])\n",
+    "        \n",
+    "        trans_2 = np.eye(4)\n",
+    "        trans_2[0,3] = a\n",
+    "\n",
+    "        rot_2 = np.array([[1,0,0,0],\n",
+    "                        [0,np.cos(alpha), -np.sin(alpha),0],\n",
+    "                        [0,np.sin(alpha), np.cos(alpha),0],\n",
+    "                        [0,0,0,1]])\n",
+    "        j_pos.append(np.matmul(trans_1,\n",
+    "                        np.matmul(rot_1,\n",
+    "                        np.matmul(trans_2,rot_2))))\n",
+    "    \n",
+    "    t = j_pos[0]\n",
+    "    for i in range(5):\n",
+    "        t = np.matmul(t,j_pos[i+1])\n",
+    "\n",
+    "    return matrix_to_coordinates(t)\n",
+    "\n",
     "def joints_forward_kinematics(joints):\n",
     "    '''Accepts as input a list of 6 joint positions in radians'''\n",
     "    joints = np.array(joints).flatten()\n",
+    "    # joints = np.append(joints,0)\n",
     "    DH_params = DH.copy()\n",
-    "    DH_params[:,0] = start_joints\n",
+    "    DH_params[:,0] = joints\n",
     "\n",
     "    j_pos = []\n",
     "    for i in range(6):\n",
@@ -145,30 +176,227 @@
     "        t = np.matmul(t,j_pos[i+1])\n",
     "    \n",
     "\n",
-    "    return matrix_to_coordinates(t)\n",
-    "\n",
-    "\n",
-    "print(joints_forward_kinematics(start_joints))"
+    "    return matrix_to_coordinates(t)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4 5 6]\n",
-      "[1, 2, 3, 4, 5, 6]\n"
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Change:            [ 0.00000  0.00000  0.00000  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00000  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Change:            [ 0.00000  0.00000  0.00000  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00000  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43285  0.09389 -0.10795  1.57586  1.75959  1.57694]\n",
+      "Change:            [ 0.00025 -0.00002  0.00099 -0.00100 -0.00000  0.00010]\n",
+      "Normalized translational change, actual: 0.0010181003981287631\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000 -0.00080  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0008\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43232  0.09393 -0.10767  1.57785  1.75959  1.57674]\n",
+      "Change:            [-0.00028  0.00002  0.00127  0.00100  0.00000 -0.00010]\n",
+      "Normalized translational change, actual: 0.0012960236000722797\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000 -0.00160  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0016\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43257  0.09391 -0.10669  1.57685  1.75959  1.57684]\n",
+      "Change:            [-0.00003  0.00000  0.00225  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0022509880010785524\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000 -0.00240  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43264  0.09390 -0.10579  1.57685  1.75959  1.57684]\n",
+      "Change:            [ 0.00005 -0.00000  0.00315 -0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0031514832244438126\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000 -0.00320  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0032\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43251  0.09392 -0.10984  1.57685  1.75959  1.57684]\n",
+      "Change:            [-0.00008  0.00001 -0.00090 -0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0009051602254375969\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00080  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0008\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43260  0.09391 -0.11063  1.57685  1.75959  1.57684]\n",
+      "Change:            [ 0.00001 -0.00000 -0.00169  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0016901509606605488\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00160  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0016\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43277  0.09389 -0.11111  1.57586  1.75959  1.57694]\n",
+      "Change:            [ 0.00018 -0.00002 -0.00217 -0.00100 -0.00000  0.00010]\n",
+      "Normalized translational change, actual: 0.002176912728905104\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43251  0.09392 -0.11210  1.57685  1.75959  1.57684]\n",
+      "Change:            [-0.00008  0.00001 -0.00316 -0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.0031568361588721343\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00320  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0032\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43260  0.09391 -0.11289  1.57685  1.75959  1.57684]\n",
+      "Change:            [ 0.00001 -0.00000 -0.00395  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.00394620411687283\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00400  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.004\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43260  0.09348 -0.11379  1.57685  1.76059  1.57684]\n",
+      "Change:            [ 0.00000 -0.00042 -0.00485  0.00000  0.00100  0.00000]\n",
+      "Normalized translational change, actual: 0.004867147767479487\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00480  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0048\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43258  0.09391 -0.11458  1.57685  1.75959  1.57684]\n",
+      "Change:            [-0.00001  0.00000 -0.00564  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, actual: 0.005640113727773421\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00560  0.00000  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0056\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43255  0.09235 -0.11132  1.57599  1.76058  1.59001]\n",
+      "Change:            [-0.00005 -0.00156 -0.00238 -0.00086  0.00098  0.01318]\n",
+      "Normalized translational change, actual: 0.0028512177651316877\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240 -0.00080  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43207  0.09101 -0.11136  1.57697  1.76055  1.60401]\n",
+      "Change:            [-0.00052 -0.00290 -0.00242  0.00012  0.00096  0.02718]\n",
+      "Normalized translational change, actual: 0.003807938283670336\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240 -0.00160  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43222  0.08962 -0.11129  1.57570  1.76051  1.61818]\n",
+      "Change:            [-0.00037 -0.00429 -0.00235 -0.00115  0.00092  0.04134]\n",
+      "Normalized translational change, actual: 0.00490603263987652\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240 -0.00240  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43177  0.08873 -0.11147  1.57623  1.76047  1.63218]\n",
+      "Change:            [-0.00083 -0.00518 -0.00252 -0.00062  0.00088  0.05535]\n",
+      "Normalized translational change, actual: 0.005822062724945997\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240 -0.00320  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43175  0.08737 -0.11141  1.57546  1.76043  1.64626]\n",
+      "Change:            [-0.00084 -0.00654 -0.00246 -0.00139  0.00084  0.06943]\n",
+      "Normalized translational change, actual: 0.007037342535424905\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240 -0.00400  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43132  0.08608 -0.11181  1.57644  1.76040  1.66024]\n",
+      "Change:            [-0.00127 -0.00783 -0.00286 -0.00041  0.00081  0.08340]\n",
+      "Normalized translational change, actual: 0.008433065787158552\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240 -0.00480  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n",
+      "Starting position: [ 0.43259  0.09391 -0.10894  1.57685  1.75959  1.57684]\n",
+      "Current position:  [ 0.43300  0.09485 -0.11117  1.57639  1.76059  1.56276]\n",
+      "Change:            [ 0.00041  0.00094 -0.00223 -0.00046  0.00100 -0.01408]\n",
+      "Normalized translational change, actual: 0.0024519496134189325\n",
+      "Motion in floating coordinate system: [ 0.00000  0.00000  0.00240  0.00080  0.00000  0.00000]\n",
+      "Normalized translational change, floating: 0.0024000000000000002\n",
+      "---------------------\n"
      ]
     }
    ],
    "source": [
-    "a = np.array([1,2,3,4,5,6])\n",
-    "print(a)\n",
-    "print(list(a))\n"
+    "\n",
+    "\n",
+    "index = 0\n",
+    "joints = joints_at_points[index][1]\n",
+    "base_pos = joints_at_points[index][2]\n",
+    "base_pos = np.array(base_pos).flatten()\n",
+    "floating_pos = joints_at_points[index][0]\n",
+    "\n",
+    "# (\"Floating coordinate system\", \"Joint angles\", \"Base position\")\n",
+    "\n",
+    "# print(np.array(start_joints).flatten())\n",
+    "calc = joints_forward_kinematics(joints)\n",
+    "# print(calc)\n",
+    "# print(base_pos)\n",
+    "\n",
+    "# error = []\n",
+    "start_position = joints_forward_kinematics(joints_at_points[0][1])\n",
+    "\n",
+    "for i in range(20):\n",
+    "    joints = joints_at_points[i][1]\n",
+    "    base_pos = joints_at_points[i][2]\n",
+    "    base_pos = np.array(base_pos).flatten()\n",
+    "    floating_pos = np.array(joints_at_points[i][0]).flatten() * 0.001\n",
+    "\n",
+    "    # (\"Floating coordinate system\", \"Joint angles\", \"Base position\")\n",
+    "\n",
+    "    calc = joints_forward_kinematics(joints)\n",
+    "    # print(calc)\n",
+    "    # print(base_pos)\n",
+    "    print(f\"Starting position: {start_position}\")\n",
+    "    print(f\"Current position:  {calc}\")\n",
+    "    print(f\"Change:            {calc - start_position}\")\n",
+    "    print(f\"Normalized translational change, actual: {np.sum((calc-start_position)[0:3]**2)**0.5}\")\n",
+    "    print(f\"Motion in floating coordinate system: {floating_pos}\")\n",
+    "    print(f\"Normalized translational change, floating: {np.sum(floating_pos[0:3]**2)**0.5}\")\n",
+    "    print(\"---------------------\")\n",
+    "    # print(f\"Non-dimensional error {np.sum((calc-base_pos)[0:3]**2)**0.5}\")\n",
+    "\n",
+    "\n",
+    "# print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.00000  0.00000  0.15190  1.57080]\n",
+      " [ 0.00000 -0.24340  0.00000  0.00000]\n",
+      " [ 0.00000 -0.21320  0.00000  0.00000]\n",
+      " [ 0.00000  0.00000  0.13110  1.57080]\n",
+      " [ 0.00000  0.00000  0.08540 -1.57080]\n",
+      " [ 0.00000  0.00000  0.22210  0.00000]]\n",
+      "-0.2132\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(DH)\n",
+    "theta,d,a,alpha = DH[2,:].tolist()\n",
+    "print(d)"
    ]
   }
  ],
@@ -188,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
