I also made some scans so I can start thinking about how to isolate the actual peak magnitude.

--- a/IK_Scans/IK_experiments.ipynb
+++ b/IK_Scans/IK_experiments.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -409,14 +409,10 @@
      "output_type": "stream",
      "text": [
       "[[  0.   0.  -9. -14. -14.   0.]\n",
-      " [  0.   0.  -8. -14. -14.   0.]\n",
-      " [  0.   0.  -7. -14. -14.   0.]\n",
-      " [  0.   0.  -6. -14. -14.   0.]\n",
-      " [  0.   0.  -5. -14. -14.   0.]]\n",
-      "[[1 1 1 1]\n",
-      " [2 2 2 2]\n",
-      " [3 3 3 3]\n",
-      " [4 4 4 4]]\n"
+      " [  0.   0.  -9. -14. -10.   0.]\n",
+      " [  0.   0.  -9. -14.  -6.   0.]\n",
+      " [  0.   0.  -9. -14.  -2.   0.]\n",
+      " [  0.   0.  -9. -14.   2.   0.]]\n"
      ]
     }
    ],
@@ -430,18 +426,17 @@
     "\n",
     "res=(1,2)\n",
     "\n",
-    "all_points = np.mgrid[\n",
+    "X,Y,Z,Rx,Ry,Rz = np.mgrid[\n",
     "            x0:x1:(int((x1-x0)/res[0])+1)*1j,\n",
     "            y0:y1:(int((y1-y0)/res[0])+1)*1j,\n",
     "            z0:z1:(int((z1-z0)/res[0])+1)*1j,\n",
     "            Rx0:Rx1:(int((Rx1-Rx0)/res[1])+1)*1j,\n",
     "            Ry0:Ry1:(int((Ry1-x0)/res[1])+1)*1j,\n",
-    "            Rz0:Rz1:(int((Rz1-x0)/res[1])+1)*1j].reshape(6,-1,order='F').T\n",
+    "            Rz0:Rz1:(int((Rz1-x0)/res[1])+1)*1j]\n",
+    "all_points = np.vstack((X.flatten(),Y.flatten(),Z.flatten(),\n",
+    "        Rx.flatten(),Ry.flatten(),Rz.flatten())).T\n",
     "\n",
-    "print(all_points[0:5])\n",
-    "\n",
-    "a = np.meshgrid([1,2,3,4],[1,2,3,4],indexing='xy')\n",
-    "print()"
+    "print(all_points[0:5])"
    ]
   }
  ],
